--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="landing" id="landing" style="margin-top: 0">
       <div class="jumbotron jumbotron-fluid hero-image">
         <h1 class="display-4">Experience the wildlife.</h1>
-        <a href="#contact" class="btn btn-primary rounded-pill">Visit Us</a>
+        <a href="#contact" class="btn btn-primary rounded-pill ">Visit Us</a>
       </div>
       
       <svg
@@ -249,7 +249,7 @@
       </div>
     </section>
 
-    <section id="faq" class="faq container bg-light h-100 pb-5">
+    <section id="faq" class="faq container-fluid bg-light h-100 pb-5">
       <div class=" py-4">
         <div class="row text-center">
           <h2 class="display-3">Frequently Asked Questions</h2>
